--- a/style/output.css
+++ b/style/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -570,36 +574,36 @@ video {
   left: 0px !important;
 }
 
-.-bottom-2 {
-  bottom: -0.5rem;
-}
-
 .bottom-0 {
   bottom: 0px;
+}
+
+.bottom-\[290px\] {
+  bottom: 290px;
 }
 
 .left-0 {
   left: 0px;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
 .left-\[-100\%\] {
   left: -100%;
+}
+
+.left-\[-70px\] {
+  left: -70px;
 }
 
 .right-4 {
   right: 1rem;
 }
 
-.right-5 {
-  right: 1.25rem;
-}
-
 .right-\[-230px\] {
   right: -230px;
+}
+
+.right-\[-80px\] {
+  right: -80px;
 }
 
 .top-0 {
@@ -614,84 +618,16 @@ video {
   top: 1.25rem;
 }
 
+.top-\[-100px\] {
+  top: -100px;
+}
+
 .top-\[-30px\] {
   top: -30px;
 }
 
-.left-\[\] {
-  left: ;
-}
-
-.left-\[-\] {
-  left: -;
-}
-
-.left-\[-50px\] {
-  left: -50px;
-}
-
-.top-40 {
-  top: 10rem;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-60 {
-  top: 15rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-\[300px\] {
-  top: 300px;
-}
-
-.top-\[350px\] {
-  top: 350px;
-}
-
 .top-\[360px\] {
   top: 360px;
-}
-
-.left-\[-70px\] {
-  left: -70px;
-}
-
-.right-\[-70px\] {
-  right: -70px;
-}
-
-.bottom-\[360px\] {
-  bottom: 360px;
-}
-
-.bottom-\[340px\] {
-  bottom: 340px;
-}
-
-.right-\[-80px\] {
-  right: -80px;
-}
-
-.bottom-\[300px\] {
-  bottom: 300px;
-}
-
-.bottom-\[290px\] {
-  bottom: 290px;
-}
-
-.top-\[-100px\] {
-  top: -100px;
 }
 
 .z-0 {
@@ -710,6 +646,14 @@ video {
   z-index: 50;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -718,28 +662,16 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-\[40px\] {
   margin-top: 40px;
 }
 
 .mt-\[50px\] {
   margin-top: 50px;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-
-.mt-\[\] {
-  margin-top: ;
 }
 
 .inline {
@@ -778,10 +710,6 @@ video {
   height: 8rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
 .h-8 {
   height: 2rem;
 }
@@ -798,8 +726,12 @@ video {
   height: 250px;
 }
 
-.h-\[270px\] {
-  height: 270px;
+.h-\[290px\] {
+  height: 290px;
+}
+
+.h-\[30\%\] {
+  height: 30%;
 }
 
 .h-\[300px\] {
@@ -808,6 +740,10 @@ video {
 
 .h-\[318px\] {
   height: 318px;
+}
+
+.h-\[330px\] {
+  height: 330px;
 }
 
 .h-\[350px\] {
@@ -822,73 +758,33 @@ video {
   height: auto;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[260px\] {
-  height: 260px;
-}
-
-.h-\[60\%\] {
-  height: 60%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[290px\] {
-  height: 290px;
-}
-
-.h-\[2880px\] {
-  height: 2880px;
-}
-
-.h-\[280px\] {
-  height: 280px;
-}
-
-.h-\[70\%\] {
-  height: 70%;
-}
-
-.h-\[30\] {
-  height: 30;
-}
-
-.h-\[30\%\] {
-  height: 30%;
-}
-
-.h-\[4\] {
-  height: 4;
-}
-
-.h-\[330px\] {
-  height: 330px;
-}
-
-.h-7 {
-  height: 1.75rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .min-h-8 {
   min-height: 2rem;
+}
+
+.min-h-\[300px\] {
+  min-height: 300px;
+}
+
+.min-h-\[1\] {
+  min-height: 1;
+}
+
+.min-h-\[150px\] {
+  min-height: 150px;
+}
+
+.min-h-\[120px\] {
+  min-height: 120px;
 }
 
 .w-10 {
@@ -899,10 +795,6 @@ video {
   width: 5rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -911,8 +803,20 @@ video {
   width: 100%;
 }
 
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[16\%\] {
+  width: 16%;
+}
+
 .w-\[20\%\] {
   width: 20%;
+}
+
+.w-\[26\%\] {
+  width: 26%;
 }
 
 .w-\[33\%\] {
@@ -944,66 +848,6 @@ video {
   width: 100%;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-\[24\%\] {
-  width: 24%;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
-.w-\[26\%\] {
-  width: 26%;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-\[5\] {
-  width: 5;
-}
-
-.w-\[56\%\] {
-  width: 56%;
-}
-
-.w-\[905\] {
-  width: 905;
-}
-
-.w-\[0\] {
-  width: 0;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[13\%\] {
-  width: 13%;
-}
-
-.w-\[16\%\] {
-  width: 16%;
-}
-
 .grow {
   flex-grow: 1;
 }
@@ -1013,63 +857,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-rotate-45 {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-45 {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[\] {
-  --tw-rotate: ;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[47deg\] {
-  --tw-rotate: 47deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[48deg\] {
-  --tw-rotate: 48deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[49deg\] {
-  --tw-rotate: 49deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[60deg\] {
-  --tw-rotate: 60deg;
+.-rotate-\[140deg\] {
+  --tw-rotate: -140deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-\[50deg\] {
   --tw-rotate: 50deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-90 {
-  --tw-rotate: -90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-180 {
-  --tw-rotate: -180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-\[1\] {
-  --tw-rotate: -1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-\[140deg\] {
-  --tw-rotate: -140deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1091,10 +885,6 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1177,10 +967,6 @@ video {
   gap: 2rem;
 }
 
-.self-end {
-  align-self: flex-end;
-}
-
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -1209,8 +995,8 @@ video {
   border-radius: 30px 30px 0px 0px;
 }
 
-.rounded-\[45px\] {
-  border-radius: 45px;
+.rounded-\[40px\] {
+  border-radius: 40px;
 }
 
 .rounded-\[48px\] {
@@ -1225,18 +1011,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-\[40px\] {
-  border-radius: 40px;
-}
-
-.rounded-\[\] {
-  border-radius: ;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1245,32 +1019,20 @@ video {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-b-8 {
   border-bottom-width: 8px;
 }
 
-.border-l {
-  border-left-width: 1px;
-}
-
 .border-t {
   border-top-width: 1px;
-}
-
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-\[\#000\] {
@@ -1278,31 +1040,12 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#444343e0\] {
+  border-color: #444343e0;
+}
+
 .border-\[\#808080b5\] {
   border-color: #808080b5;
-}
-
-.border-\[\#fff\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
-.border-\[black\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
-.border-lime-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(163 230 53 / var(--tw-border-opacity, 1));
-}
-
-.border-white\/20 {
-  border-color: rgb(255 255 255 / 0.2);
-}
-
-.border-\[\] {
-  border-color: ;
 }
 
 .border-\[\#b9ff66\] {
@@ -1310,36 +1053,22 @@ video {
   border-color: rgb(185 255 102 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#000000e0\] {
-  border-color: #000000e0;
+.border-\[\#fff\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#000000d3\] {
-  border-color: #000000d3;
+.border-\[0\.6\] {
+  border-color: 0.6;
 }
 
-.border-\[\#292929d3\] {
-  border-color: #292929d3;
+.border-\[black\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#474646d3\] {
-  border-color: #474646d3;
-}
-
-.border-\[\#444343d3\] {
-  border-color: #444343d3;
-}
-
-.border-\[\#444343e9\] {
-  border-color: #444343e9;
-}
-
-.border-\[\#444343de\] {
-  border-color: #444343de;
-}
-
-.border-\[\#444343e0\] {
-  border-color: #444343e0;
+.border-white\/20 {
+  border-color: rgb(255 255 255 / 0.2);
 }
 
 .bg-\[\#191a23\] {
@@ -1387,8 +1116,25 @@ video {
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.bg-\[\] {
-  background-color: ;
+.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
+}
+
+.bg-\[gray\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 128 128 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#808080a0\] {
+  background-color: #808080a0;
+}
+
+.bg-\[\#80808083\] {
+  background-color: #80808083;
+}
+
+.bg-\[\#8080809c\] {
+  background-color: #8080809c;
 }
 
 .p-1 {
@@ -1403,10 +1149,6 @@ video {
   padding: 1rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
 .p-7 {
   padding: 1.75rem;
 }
@@ -1415,8 +1157,8 @@ video {
   padding: 2rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-1 {
@@ -1427,6 +1169,16 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-10 {
@@ -1444,23 +1196,8 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
+.pb-7 {
+  padding-bottom: 1.75rem;
 }
 
 .pl-4 {
@@ -1475,8 +1212,8 @@ video {
   padding-top: 0.75rem;
 }
 
-.pb-7 {
-  padding-bottom: 1.75rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .text-2xl {
@@ -1499,11 +1236,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1522,24 +1254,12 @@ video {
   font-weight: 600;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .leading-4 {
   line-height: 1rem;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
 }
 
 .text-\[\#000\] {
@@ -1577,19 +1297,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
-}
-
-.text-lime-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 230 53 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -1597,14 +1307,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-\[gray\] {
+  --tw-text-opacity: 1;
+  color: rgb(128 128 128 / var(--tw-text-opacity, 1));
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.underline {
+  text-decoration-line: underline;
 }
 
 .shadow-md {
@@ -1613,9 +1322,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-\[\#fff\] {
   --tw-shadow-color: #fff;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .backdrop-blur-md {
@@ -1659,11 +1379,6 @@ video {
   border-width: 2px;
 }
 
-.hover\:border-\[\#b9ff66\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(185 255 102 / var(--tw-border-opacity, 1));
-}
-
 .hover\:bg-\[\#b9ff66\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(185 255 102 / var(--tw-bg-opacity, 1));
@@ -1672,11 +1387,6 @@ video {
 .hover\:bg-\[\#f3f3f3\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 243 243 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#fff\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-\[\#b9ff66\]:hover {
@@ -1694,25 +1404,7 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 @media (min-width: 370px) {
-  .min-\[370px\]\:top-\[-100px\] {
-    top: -100px;
-  }
-
-  .min-\[370px\]\:top-\[-70px\] {
-    top: -70px;
-  }
-
-  .min-\[370px\]\:top-\[-40px\] {
-    top: -40px;
-  }
-
   .min-\[370px\]\:\!top-\[-40px\] {
     top: -40px !important;
   }
@@ -1743,16 +1435,8 @@ video {
     margin-top: 80px;
   }
 
-  .sm\:mt-\[\] {
-    margin-top: ;
-  }
-
   .sm\:flex {
     display: flex;
-  }
-
-  .sm\:grid {
-    display: grid;
   }
 
   .sm\:hidden {
@@ -1771,12 +1455,28 @@ video {
     height: 10rem;
   }
 
+  .sm\:h-\[100\%\] {
+    height: 100%;
+  }
+
   .sm\:h-\[280px\] {
     height: 280px;
   }
 
   .sm\:h-\[300px\] {
     height: 300px;
+  }
+
+  .sm\:h-\[350px\] {
+    height: 350px;
+  }
+
+  .sm\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .sm\:h-\[430px\] {
+    height: 430px;
   }
 
   .sm\:h-\[617px\] {
@@ -1787,40 +1487,24 @@ video {
     height: auto;
   }
 
-  .sm\:h-\[100\%\] {
-    height: 100%;
-  }
-
-  .sm\:h-\[350px\] {
-    height: 350px;
-  }
-
-  .sm\:h-\[450px\] {
-    height: 450px;
-  }
-
-  .sm\:h-\[430px\] {
-    height: 430px;
-  }
-
-  .sm\:h-\[240px\] {
-    height: 240px;
-  }
-
   .sm\:min-h-32 {
     min-height: 8rem;
+  }
+
+  .sm\:min-h-\[400px\] {
+    min-height: 400px;
   }
 
   .sm\:w-\[18\%\] {
     width: 18%;
   }
 
-  .sm\:w-\[20\%\] {
-    width: 20%;
-  }
-
   .sm\:w-\[30\%\] {
     width: 30%;
+  }
+
+  .sm\:w-\[300px\] {
+    width: 300px;
   }
 
   .sm\:w-\[37\%\] {
@@ -1843,6 +1527,10 @@ video {
     width: 56%;
   }
 
+  .sm\:w-\[60\%\] {
+    width: 60%;
+  }
+
   .sm\:w-\[70\%\] {
     width: 70%;
   }
@@ -1851,12 +1539,8 @@ video {
     width: 80%;
   }
 
-  .sm\:w-\[60\%\] {
-    width: 60%;
-  }
-
-  .sm\:w-\[72\%\] {
-    width: 72%;
+  .sm\:w-\[400px\] {
+    width: 400px;
   }
 
   .sm\:grid-cols-2 {
@@ -1887,10 +1571,6 @@ video {
     align-items: center;
   }
 
-  .sm\:justify-normal {
-    justify-content: normal;
-  }
-
   .sm\:justify-end {
     justify-content: flex-end;
   }
@@ -1903,8 +1583,8 @@ video {
     gap: 2.5rem;
   }
 
-  .sm\:gap-12 {
-    gap: 3rem;
+  .sm\:gap-16 {
+    gap: 4rem;
   }
 
   .sm\:gap-2 {
@@ -1925,14 +1605,6 @@ video {
 
   .sm\:gap-7 {
     gap: 1.75rem;
-  }
-
-  .sm\:gap-16 {
-    gap: 4rem;
-  }
-
-  .sm\:gap-1 {
-    gap: 0.25rem;
   }
 
   .sm\:gap-8 {
@@ -1956,10 +1628,6 @@ video {
     padding-bottom: 1rem;
   }
 
-  .sm\:pt-\[100px\] {
-    padding-top: 100px;
-  }
-
   .sm\:pt-\[80px\] {
     padding-top: 80px;
   }
@@ -1977,6 +1645,10 @@ video {
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .sm\:text-\[50\%\] {
+    font-size: 50%;
   }
 
   .sm\:text-base {
@@ -1998,39 +1670,11 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .sm\:text-\[90\%\] {
-    font-size: 90%;
-  }
-
-  .sm\:text-\[80\%\] {
-    font-size: 80%;
-  }
-
-  .sm\:text-\[70\%\] {
-    font-size: 70%;
-  }
-
-  .sm\:text-\[60\%\] {
-    font-size: 60%;
-  }
-
-  .sm\:text-\[50\%\] {
-    font-size: 50%;
-  }
-
-  .sm\:text-\[\] {
-    color: ;
-  }
 }
 
 @media (min-width: 768px) {
   .md\:mt-\[100px\] {
     margin-top: 100px;
-  }
-
-  .md\:grid {
-    display: grid;
   }
 
   .md\:h-16 {
@@ -2041,20 +1685,16 @@ video {
     height: 400px;
   }
 
-  .md\:h-\[\] {
-    height: ;
-  }
-
-  .md\:h-\[00px\] {
-    height: 00px;
-  }
-
   .md\:w-\[20\%\] {
     width: 20%;
   }
 
   .md\:w-\[30\%\] {
     width: 30%;
+  }
+
+  .md\:w-\[35\%\] {
+    width: 35%;
   }
 
   .md\:w-\[40\%\] {
@@ -2069,28 +1709,12 @@ video {
     width: 50%;
   }
 
-  .md\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[35\%\] {
-    width: 35%;
-  }
-
-  .md\:w-\[60\%\] {
-    width: 60%;
-  }
-
   .md\:w-\[55\%\] {
     width: 55%;
   }
 
-  .md\:w-\[25\%\] {
-    width: 25%;
+  .md\:w-\[70\%\] {
+    width: 70%;
   }
 
   .md\:grid-cols-2 {
@@ -2185,10 +1809,6 @@ video {
     height: auto;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
   .lg\:w-\[25\%\] {
     width: 25%;
   }
@@ -2197,12 +1817,16 @@ video {
     width: 70%;
   }
 
-  .lg\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2222,6 +1846,11 @@ video {
     line-height: 2.25rem;
   }
 
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -2230,10 +1859,5 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 }
